add_executable(sock_type sock_type.c)
target_link_libraries(sock_type tcp_ip_common)

add_executable(sock_buf sock_buf.c)
target_link_libraries(sock_buf tcp_ip_common)

add_executable(sock_reuseaddr sock_reuseaddr.c)
target_link_libraries(sock_reuseaddr tcp_ip_common)

add_executable(sock_tcp_nodelay sock_tcp_nodelay.c)
target_link_libraries(sock_tcp_nodelay tcp_ip_common)

add_executable(sock_reuseaddr_multi sock_reuseaddr_multi.c)
target_link_libraries(sock_reuseaddr_multi tcp_ip_common)
